// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tab-web-platform pages/Dashboard/ProgressPanel Index 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        class="w-[1200px]"
      >
        <div
          class="grid grid-cols md:grid-cols-4 divide-y-2 md:divide-y-0 divide-x-0 md:divide-x divide-gray-4 bg-gray-0 py-6 mt-0 md:mt-12 rounded shadow-md md:shadow-sm"
        >
          <div
            class="flex flex-col-2 py-2 md:py-0 justify-between md:justify-inherit items-center md:items-inherit md:flex-col px-6"
          >
            <span
              class="text-dark-secondary text-h-xs font-medium mb-4 mt-4 md:mt-0"
            >
              Active Users
            </span>
            <p
              class="text-dark-primary text-h-md md:text-h3-lg font-medium"
            >
              100
            </p>
          </div>
          <div
            class="flex flex-col-2 py-2 md:py-0 justify-between md:justify-inherit items-center md:items-inherit md:flex-col px-6"
          >
            <span
              class="text-dark-secondary text-h-xs font-medium mb-4 mt-4 md:mt-0"
            >
              Learning Hours
            </span>
            <p
              class="text-dark-primary text-h-md md:text-h3-lg font-medium"
            >
              1 hrs, 23 mins
            </p>
          </div>
          <div
            class="flex flex-col-2 py-2 md:py-0 justify-between md:justify-inherit items-center md:items-inherit md:flex-col px-6"
          >
            <span
              class="text-dark-secondary text-h-xs font-medium mb-4 mt-4 md:mt-0"
            >
              Assessed Users
            </span>
            <p
              class="text-dark-primary text-h-md md:text-h3-lg font-medium"
            >
              80
            </p>
          </div>
          <div
            class="flex flex-col-2 py-2 md:py-0 justify-between md:justify-inherit items-center md:items-inherit md:flex-col px-6"
          >
            <span
              class="text-dark-secondary text-h-xs font-medium mb-4 mt-4 md:mt-0"
            >
              Avg Skill Growth
              <div
                class="tooltip ml-1.5"
              >
                <img
                  alt="question icon"
                  data-nimg="1"
                  decoding="async"
                  height="18"
                  loading="lazy"
                  src="/images/question-circle.svg"
                  style="color: transparent;"
                  width="18"
                />
              </div>
            </span>
            <p
              class="text-dark-primary text-h-md md:text-h3-lg font-medium"
            >
              15%
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="w-[1200px]"
    >
      <div
        class="grid grid-cols md:grid-cols-4 divide-y-2 md:divide-y-0 divide-x-0 md:divide-x divide-gray-4 bg-gray-0 py-6 mt-0 md:mt-12 rounded shadow-md md:shadow-sm"
      >
        <div
          class="flex flex-col-2 py-2 md:py-0 justify-between md:justify-inherit items-center md:items-inherit md:flex-col px-6"
        >
          <span
            class="text-dark-secondary text-h-xs font-medium mb-4 mt-4 md:mt-0"
          >
            Active Users
          </span>
          <p
            class="text-dark-primary text-h-md md:text-h3-lg font-medium"
          >
            100
          </p>
        </div>
        <div
          class="flex flex-col-2 py-2 md:py-0 justify-between md:justify-inherit items-center md:items-inherit md:flex-col px-6"
        >
          <span
            class="text-dark-secondary text-h-xs font-medium mb-4 mt-4 md:mt-0"
          >
            Learning Hours
          </span>
          <p
            class="text-dark-primary text-h-md md:text-h3-lg font-medium"
          >
            1 hrs, 23 mins
          </p>
        </div>
        <div
          class="flex flex-col-2 py-2 md:py-0 justify-between md:justify-inherit items-center md:items-inherit md:flex-col px-6"
        >
          <span
            class="text-dark-secondary text-h-xs font-medium mb-4 mt-4 md:mt-0"
          >
            Assessed Users
          </span>
          <p
            class="text-dark-primary text-h-md md:text-h3-lg font-medium"
          >
            80
          </p>
        </div>
        <div
          class="flex flex-col-2 py-2 md:py-0 justify-between md:justify-inherit items-center md:items-inherit md:flex-col px-6"
        >
          <span
            class="text-dark-secondary text-h-xs font-medium mb-4 mt-4 md:mt-0"
          >
            Avg Skill Growth
            <div
              class="tooltip ml-1.5"
            >
              <img
                alt="question icon"
                data-nimg="1"
                decoding="async"
                height="18"
                loading="lazy"
                src="/images/question-circle.svg"
                style="color: transparent;"
                width="18"
              />
            </div>
          </span>
          <p
            class="text-dark-primary text-h-md md:text-h3-lg font-medium"
          >
            15%
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`tab-web-platform pages/Dashboard/ProgressPanel With Member View 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        class="w-[1200px]"
      >
        <div
          class="grid grid-cols md:grid-cols-4 divide-y-2 md:divide-y-0 divide-x-0 md:divide-x divide-gray-4 bg-gray-0 py-6 mt-0 md:mt-12 rounded shadow-md md:shadow-sm"
        >
          <div
            class="flex flex-col-2 py-2 md:py-0 justify-between md:justify-inherit items-center md:items-inherit md:flex-col px-6"
          >
            <span
              class="text-dark-secondary text-h-xs font-medium mb-4 mt-4 md:mt-0"
            >
              Points Earned
            </span>
            <p
              class="text-dark-primary text-h-md md:text-h3-lg font-medium"
            >
              150
            </p>
          </div>
          <div
            class="flex flex-col-2 py-2 md:py-0 justify-between md:justify-inherit items-center md:items-inherit md:flex-col px-6"
          >
            <span
              class="text-dark-secondary text-h-xs font-medium mb-4 mt-4 md:mt-0"
            >
              Activities Completed
            </span>
            <p
              class="text-dark-primary text-h-md md:text-h3-lg font-medium"
            >
              2
            </p>
          </div>
          <div
            class="flex flex-col-2 py-2 md:py-0 justify-between md:justify-inherit items-center md:items-inherit md:flex-col px-6"
          >
            <span
              class="text-dark-secondary text-h-xs font-medium mb-4 mt-4 md:mt-0"
            >
              Avg Score
            </span>
            <p
              class="text-dark-primary text-h-md md:text-h3-lg font-medium"
            >
              20%
            </p>
          </div>
          <div
            class="flex flex-col-2 py-2 md:py-0 justify-between md:justify-inherit items-center md:items-inherit md:flex-col px-6"
          >
            <span
              class="text-dark-secondary text-h-xs font-medium mb-4 mt-4 md:mt-0"
            >
              Avg Skill Growth
              <div
                class="tooltip ml-1.5"
              >
                <img
                  alt="question icon"
                  data-nimg="1"
                  decoding="async"
                  height="18"
                  loading="lazy"
                  src="/images/question-circle.svg"
                  style="color: transparent;"
                  width="18"
                />
              </div>
            </span>
            <p
              class="text-dark-primary text-h-md md:text-h3-lg font-medium"
            >
              0%
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="w-[1200px]"
    >
      <div
        class="grid grid-cols md:grid-cols-4 divide-y-2 md:divide-y-0 divide-x-0 md:divide-x divide-gray-4 bg-gray-0 py-6 mt-0 md:mt-12 rounded shadow-md md:shadow-sm"
      >
        <div
          class="flex flex-col-2 py-2 md:py-0 justify-between md:justify-inherit items-center md:items-inherit md:flex-col px-6"
        >
          <span
            class="text-dark-secondary text-h-xs font-medium mb-4 mt-4 md:mt-0"
          >
            Points Earned
          </span>
          <p
            class="text-dark-primary text-h-md md:text-h3-lg font-medium"
          >
            150
          </p>
        </div>
        <div
          class="flex flex-col-2 py-2 md:py-0 justify-between md:justify-inherit items-center md:items-inherit md:flex-col px-6"
        >
          <span
            class="text-dark-secondary text-h-xs font-medium mb-4 mt-4 md:mt-0"
          >
            Activities Completed
          </span>
          <p
            class="text-dark-primary text-h-md md:text-h3-lg font-medium"
          >
            2
          </p>
        </div>
        <div
          class="flex flex-col-2 py-2 md:py-0 justify-between md:justify-inherit items-center md:items-inherit md:flex-col px-6"
        >
          <span
            class="text-dark-secondary text-h-xs font-medium mb-4 mt-4 md:mt-0"
          >
            Avg Score
          </span>
          <p
            class="text-dark-primary text-h-md md:text-h3-lg font-medium"
          >
            20%
          </p>
        </div>
        <div
          class="flex flex-col-2 py-2 md:py-0 justify-between md:justify-inherit items-center md:items-inherit md:flex-col px-6"
        >
          <span
            class="text-dark-secondary text-h-xs font-medium mb-4 mt-4 md:mt-0"
          >
            Avg Skill Growth
            <div
              class="tooltip ml-1.5"
            >
              <img
                alt="question icon"
                data-nimg="1"
                decoding="async"
                height="18"
                loading="lazy"
                src="/images/question-circle.svg"
                style="color: transparent;"
                width="18"
              />
            </div>
          </span>
          <p
            class="text-dark-primary text-h-md md:text-h3-lg font-medium"
          >
            0%
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
